# ChangeLog for www-client/epiphany
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/epiphany/ChangeLog,v 1.159 2008/06/19 16:59:46 leio Exp $

*epiphany-2.22.2-r10 (19 Jun 2008)

  19 Jun 2008; Mart Raudsepp <leio@gentoo.org>
  +files/epiphany-2.22.2-xul1.9-ContentHandler-fix.patch,
  +epiphany-2.22.2-r10.ebuild:
  Add a revision that uses xulrunner-1.9, also solves bug 213361

  02 Jun 2008; Mart Raudsepp <leio@gentoo.org> epiphany-2.22.1.1.ebuild,
  epiphany-2.22.2.ebuild:
  Fix deps to net-libs/xulrunner-1.8 or www-client/mozilla-firefox-2 - the
  configure options passed wanted =xul-1.8 anyway; a future revision will be
  made to work with xul-1.9

*epiphany-2.22.2 (31 May 2008)

  31 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -epiphany-2.22.0.ebuild, -epiphany-2.22.1.ebuild, +epiphany-2.22.2.ebuild:
  New version for GNOME-2.22.2. Bug fixes.

*epiphany-2.22.1.1 (10 Apr 2008)

  10 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +epiphany-2.22.1.1.ebuild:
  bump to 2.22.1.1. Changes to documentation afaict.

*epiphany-2.22.1 (10 Apr 2008)

  10 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +epiphany-2.22.1.ebuild:
  bump to 2.22.1. Bug/build fixes and translation updates.

*epiphany-2.22.0 (22 Mar 2008)

  22 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +epiphany-2.22.0.ebuild:
  New version for GNOME-2.22. Uses GIO, internal refactoring to ease cross
  engine support, and some GUI work (notifications for downloads for
  example)

  17 Mar 2008; Raúl Porcel <armin76@gentoo.org> epiphany-2.20.3.ebuild:
  Fix deps for net-libs/xulrunner and www-client/mozilla-firefox

  10 Mar 2008; Mart Raudsepp <leio@gentoo.org>
  -files/epiphany-1.9.2-broken-firefox.patch, -epiphany-2.18.3.ebuild,
  -epiphany-2.20.1.ebuild, -epiphany-2.20.2.ebuild:
  Remove old

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> epiphany-2.20.3.ebuild: