@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX epiphany-2.20.3-fix-de-docs-tests.patch 1331 RMD160 7b7ba7a33a0975fe994bfe0d0022e26d77bd8bff SHA1 d1f318e720348dae6c6898fbf02c4e5e14c07903 SHA256 8d04f7011fe6cbab3e97f8c9cb800079227bfb0cde5ee38105607b585dfd387c
 AUX epiphany-2.22.2-xul1.9-ContentHandler-fix.patch 437 RMD160 644639144fe179ae55bb4e1ac00f42544b7678c8 SHA1 9fdf2987a6d17497ee423341a07e0f290c0a9a94 SHA256 423a255801d9b6f3a0cb51990795e07b3386b05bb0c84cd275f3966abad69c17
 DIST epiphany-2.20.3.tar.bz2 4945544 RMD160 1af464d3b694bb30e9491ea49162d79b655fa140 SHA1 ee3d21dde38970d9bfc715e2560f68303ac07e83 SHA256 a76268f0b842b9f9f2545717273062aeba84351208110064da55f3fe5277a9ca
@@ -5,7 +8,14 @@ DIST epiphany-2.22.1.1.tar.bz2 5184989 RMD160 a59cf90ae697f32f2de843d9c0a993673f
 DIST epiphany-2.22.2.tar.bz2 5183641 RMD160 d97c6e8bebe8b5f13ad6ad98f893e83ddde268a1 SHA1 bd57901dec8684e6f39bfadb426eac475a353a97 SHA256 be9c9a5bf83f9862dd84c8c31b6a82d11e466812b800bb94f2ba6c12cb0df2d0
 EBUILD epiphany-2.20.3.ebuild 2497 RMD160 9f61977a0944ce96994db6d5612acb30de9f5a32 SHA1 18fe2cd89ad4d3aab80160fea3434cb708f0a73a SHA256 f99bf563d9060a85c1d51a6f209a575b0896da98fa027edf61c4df8d212d7dac
 EBUILD epiphany-2.22.1.1.ebuild 2647 RMD160 27950db85a59c8916176828dbc37c31f0c033127 SHA1 8d0e60d0c4ac7698cb1e25299a6c87da8d38263d SHA256 bda02a4092d9d59fa6190bc3a4370b891ee87df56474f1a1520844f964ce2f33
-EBUILD epiphany-2.22.2-r10.ebuild 2124 RMD160 9801bd6eabe4fa4fd02da599183f3741aca51183 SHA1 d80605dd7c50c146ae4f2a882a204384aed57ad5 SHA256 0d332533daf92ac592ff95dc500fe56dbb2939258ee4fbbd71962757515a4bba
+EBUILD epiphany-2.22.2-r10.ebuild 2322 RMD160 62bb0fe67696c08e6ef9c7de8dc28485592303fb SHA1 9c23f047ca5930763219d7221824ee3d2f675903 SHA256 d91fc890b8cb19d51dd0b9bf4d20462258412884ae32c240d7e8f68e54ca898c
 EBUILD epiphany-2.22.2.ebuild 2645 RMD160 426d4b61af77aab8d85091eb2cdddd76ea034411 SHA1 8a14f0340eb8fbe05a5533bf8a77469ac67cb460 SHA256 da59ba26c8a49642b8e33cde4f2404d073506274f198c413f87b064637f1e0aa
-MISC ChangeLog 34855 RMD160 2481ace8a6c2a8e36e169b9c5f580153f6f656bb SHA1 fd111716d54543a4257792c10136da8bd89fc722 SHA256 c2ec6854d3cfa1c1a8f2e20806736c3e96f0a68a8046285b1bce946e61738780
+MISC ChangeLog 35061 RMD160 56ab97a7662a26e0e8653b05a9ef79d325cca3af SHA1 434bce3241000004842562ff3a397206b9f8d971 SHA256 37ecac029d65496bc9674a0de7f76a2c811b06be916de870c40f05c35ada9b5e
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkhdt8MACgkQkeYb6olFHJdjWwCgjbfoawylYKnQ8idVihap33Q7
+UxkAnAzZv099uB8YrrQVhIX8orCN0SHb
+=B9zk
+-----END PGP SIGNATURE-----
